fixed more alignment issues

--- a/static/CSS/profile.css
+++ b/static/CSS/profile.css
@@ -1,6 +1,6 @@
 #profileInfo{
     display:flex;
-    justify-content:space-evenly;
+    
 
 }
 #projectContent{
@@ -12,9 +12,12 @@
     margin-left:3%;
 }
 #profilePic{
-    width:30%;
+    width:80%;
     margin-right:1%;
 
+}
+#ratingsPicContainer{
+    width:25%;
 }
 #userImg{
     width:100%;
@@ -22,7 +25,28 @@
 }
 .projectPhoto{
     height: 150px;
+    width:150px;
 }
 .projectContainer{
     margin-left:1%;
+    
+}
+.projectContent{
+    display:flex;
+    flex-direction:row;
+    gap:20px;
+ 
+}
+#ratingsPicContainer {
+    display: flex;
+    flex-direction:column;
+    align-self:center;
+}
+#nameLocationBioContainer {
+ 
+    align-self:center;
+    margin-bottom:5%;
+}
+#userProjects{
+    margin-left:.5%;
 }
